; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/extr_esil.c_esil_num.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/extr_esil.c_esil_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @esil_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @esil_num(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %28

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i8* @r_anal_esil_pop(i32* %10)
  store i8* %11, i8** %4, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %28

14:                                               ; preds = %9
  %15 = load i32*, i32** %3, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @r_anal_esil_get_parm(i32* %15, i8* %16, i32* %5)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %22, label %19

19:                                               ; preds = %14
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @free(i8* %20)
  store i32 0, i32* %2, align 4
  br label %28

22:                                               ; preds = %14
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @free(i8* %23)
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @r_anal_esil_pushnum(i32* %25, i32 %26)
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %22, %19, %13, %8
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i8* @r_anal_esil_pop(i32*) #1

declare dso_local i32 @r_anal_esil_get_parm(i32*, i8*, i32*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @r_anal_esil_pushnum(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
